--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
+    "framer-motion": "^11.13.1",
     "jwt-decode": "^4.0.0",
+    "motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
