--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.8",
     "framer-motion": "^11.13.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
