--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^7.1.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
